Use URLEncoder.encode(String, Charset)
We are running with Java 11 and as Modernizer correctly points out, we
can use direct charset variant which was introduced with Java 10. This
cuts down a tiny bit of dead code.

Change-Id: I7c42984bc1e05e94f5266f26e13aaab650ae4f70
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 02215a58e5c9ebe4624e6ca2103b00a796fcd5f7)